fix: flicker with alpineJs and tailwind on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,6 +26,10 @@
   @apply border border-gray-400 bg-transparent p-2 hover:border-gray-300;
 }
 
+[x-cloak] {
+  display: none !important;
+}
+
 @layer base {
   body {
     @apply bg-brand-primary text-white;
